<resources>
    <string name="app_name">Remo Robot Controller</string>
    <string name="app_display_name">Remo Robot</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_skip">Skip Step</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="power">Power</string>
    <string name="settings">Settings</string>

    <!-- Switch On/Off  -->
    <string name="switch_on_text">On</string>
    <string name="switch_off_text">Off</string>

    <string name="bitrate">Bitrate</string>

    <!--Settings Landing Page-->
    <string name="generalSettings">General</string>
    <string name="advancedSettings">Experimental</string>
    <string name="advancedSettingsConnection">Advanced</string>
    <string name="systemSettingsTitle">System Settings</string>

    <!--Connection-->

    <string name="connectionSettingsTitle">Connection</string>
    <string name="connectionSettingsSummary">APIKey, Owner</string>
    <string name="connectionApiToken">API Key</string>
    <string name="connectionChannelId">Channel ID</string>
    <string name="connectionChannelIdScan">List channels</string>

    <!--Robot-->

    <string name="robotSettingsTitle">Robot</string>
    <string name="robotSettingsSummary">Motors, Sensors, Telemetry</string>
    <string name="robotConnectionTypeTitle">Connection Type</string>
    <string name="robotProtocolTypeTitle">Protocol Type</string>

    <!--Camera-->
    <string name="cameraSettingsTitle">Camera</string>
    <string name="cameraDeviceIdTitle">Camera Device ID (0 is back)</string>
    <string name="cameraSettingsSummary">Resolution, Orientation, Bitrate</string>
    <string name="cameraResolutionTitle">Resolution</string>
    <string name="cameraFocusTitle">Auto Focus</string>
    <string name="cameraOrientationTitle">Orientation</string>
    <string name="camera2DisabledTitle">Camera2 Disabled</string>
    <string name="camera2DisabledSummary">Device is using legacy camera API or is below OS 7.0. Some features may be locked</string>
    <!--Microphone-->
    <string name="microphoneSettingsTitle">Microphone</string>
    <string name="microphoneSettingsSummary">Volume, Bitrate</string>
    <string name="micVolumeBoostTitle">Volume Boost</string>
    <!--Audio/Speaker-->
    <string name="audioSettingsTitle">Audio and Commands</string>
    <string name="audioSettingsSummary">Text to Speech, Device Volume, Commands</string>
    <string name="textToSpeech">Text To Speech</string>
    <string name="audioSettingsTTSRemoEnabledTitle">Allow Text To Speech</string>
    <string name="audioSettingsTTSRemoEnabledSummary">Receive chat from remo.tv. Still will allow commands if disabled</string>
    <string name="audioInternalTTSTitle">Internal App Messages</string>
    <string name="audioInternalTTSSummary">Internal app events via TTS, such as
        connectivity</string>
    <string name="audioBatteryCommandTitle">Allow battery command</string>
    <string name="audioBatteryCommandSummary">Enable ability for typing \`.battery level\` in chat
        to have the phone speak its battery life</string>
    <string name="audioSystemSoundSettingsTitle">Sound Settings</string>
    <string name="audioSystemSoundSettingsSummary">System Sound Settings</string>
    <string name="audioSystemTTSSettingsTitle">TTS Settings</string>
    <string name="audioSystemTTSSettingsSummary">System Text To Speech Settings</string>

    <!--Display-->

    <string name="displaySettingsTitle">Display</string>
    <string name="displaySettingsSummary">Timeout, Chat, Doze</string>

    <string name="displayPersistTitle">Keep Screen On</string>
    <string name="displayPersistSummary">Screen will stay on until device is
        manually locked</string>
    <string name="displayChatEnabledTitle">Chat Display</string>
    <string name="displayChatEnabledSummary">Allow chat to display on screen</string>
    <string name="autoHideControlsEnabledTitle">Auto Hide Controls</string>
    <string name="autoHideControlsEnabledSummary">Controls will disappear after 10 seconds</string>
    <string name="displaySystemSettingsTitle">System Display Settings</string>
    <string name="displaySystemSettingsSummary">Brightness, Sleep Time, Color Mode</string>
    <string name="dozeSettingsPageTitle">App Power Settings</string>
    <string name="dozeSettingsPageSummary">Control power saving mode for this app. Only needed
        if the screen is turned off</string>

    <!--Open Source-->

    <string name="openSourceSettingsTitle">Open Source Licenses</string>

    <!--Feedback-->
    <string name="feedbackSettingsTitle">Send feedback</string>
    <string name="feedbackSettingsSummary">Report technical issues or suggest
        new features</string>
    <string name="internalCommandBlockingSummary">App software handles stationary mode instead of the hardware.             If disabled we will send the command to the bot if possible</string>
    <string name="internalCommandBlockingTitle">Internal stationary mode</string>
    <string name="internalCommandsToBlockTitle">Commands to block (comma delimited list)</string>
    <string name="serverOwnerTitle">Server owner username</string>
    <string name="ffmpegFilterTitle">FFmpeg additional filters (no spaces!)</string>
    <string name="ffmpegStreamingEndpointTitle">Endpoint</string>
    <string name="ffmpegInputOptionsTitle">ffmpeg input options</string>
    <string name="ffmpegOutputOptionsTitle">ffmpeg output options</string>
    <string name="webServerHint">Use the web page that is now running to input the connection settings from a PC.
        \nThis is the only page that runs the web server
        \nThe device has to be connected to the same Wi-Fi network for this to work</string>
    <string name="misc">Miscellaneous</string>
    <string name="logLevelTitle">Log Level</string>
    <string name="showStartMessageTitle">Show Start Message</string>
    <string name="showStartMessageDescription">Show the start message in chat when the robot starts or reconnects</string>
    <string name="permissionsPrompt">One or more permissions have not been granted. Please turn off features or turn on permissions from the settings</string>
    <string name="location">Location</string>
    <string name="camera">Camera</string>
    <string name="microphone">Microphone</string>
    <string name="manage_permissions">Manage Permissions</string>
    <string name="remo_settings">Remo Settings</string>
    <!--EndRegion-->

    <!--External Control-->
    <string name="externalControlPrompt">Allow %s to start a remo.tv stream?</string>
    <string name="cameraUsageString">The camera &lt;b&gt;%s&lt;/b&gt; be used in the stream</string>
    <string name="micUsageString">The microphone &lt;b&gt;%s&lt;/b&gt; be used in the stream</string>
    <string name="channelNameString">Channel name: %s</string>
    <string name="allowButtonString">Start streaming</string>
    <string name="denyButtonString">Deny</string>
    <string name="startedWithUnexpectedAction">This screen was started with unexpected action %s. The start streaming button will do nothing.</string>
</resources>
